fluxcd/infrastructure/services/overlays/production/phase-01-storage/ceph-rgw/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ceph-rgw
spec:
  replicas: 2
  template:
    metadata:
      labels:
        policy.prplanit.com/probe: "true"
        policy.prplanit.com/ingress: "true"
        policy.prplanit.com/cap.ceph: "true"
        policy.prplanit.com/access-scope-ceph: "gorons-bracelet.rgw"
    spec:
      containers:
        - name: rgw
          image: quay.io/ceph/ceph:v21
          args:
            - --foreground
            - --rgw-frontends=beast port=8080
            - --name=client.dungeon-rgw
            - --keyring=/etc/ceph/ceph.keyring
            - --rgw-data=/var/lib/ceph/radosgw
            - --rgw-realm=dungeon
            - --rgw-zonegroup=default
            - --rgw-zone=default
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              memory: 2Gi
              cpu: 1000m
  volumeClaimTemplates:
    - metadata:
        name: rgw-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-rbd-retain
        resources:
          requests:
            storage: 10Gi
