fluxcd/infrastructure/services/overlays/production/phase-01-storage/ceph-rgw/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ceph-rgw
  annotations:
    lbipam.cilium.io/ips: "172.22.30.101"
    lbipam.cilium.io/sharing-key: "gorons-bracelet"
    gatus.home-operations.com/endpoint: |
      group: "Storage (Goron's Bracelet💪)"
      url: http://ceph-rgw.gorons-bracelet.svc.cluster.local
      interval: 60s
      conditions:
        - "[STATUS] == any(200, 403)"
spec:
  type: LoadBalancer
