fluxcd/infrastructure/services/overlays/production/phase-01-storage/ceph-rgw/httproute-s3.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-rgw-s3
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Storage (Goron's Bracelet💪)"
      url: https://s3.pcfae.com/
      interval: 60s
      conditions:
        - "[STATUS] == any(200, 403)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "s3.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ceph-rgw
          port: 80
      timeouts:
        request: "3600s"
        backendRequest: "3600s"
